@@ -4,12 +4,16 @@
 \documentclass{ujarticle}
 
 % for dvipdfmx
-\AtBeginDvi{\special{pdf:mapline upjf-r unicode HaranoAjiMincho-Regular.otf}}
-\AtBeginDvi{\special{pdf:mapline upjf-g unicode HaranoAjiGothic-Regular.otf}}
+%\AtBeginDvi{\special{pdf:mapline upjf-r UniJIS-UTF16-H HaranoAjiMincho-Regular.otf}}
+%\AtBeginDvi{\special{pdf:mapline upjf-g UniJIS-UTF16-H HaranoAjiGothic-Regular.otf}}
+%\AtBeginDvi{\special{pdf:mapline upjf-r UniJIS-UTF16-H !Ryumin-Light}}
+%\AtBeginDvi{\special{pdf:mapline upjf-g UniJIS-UTF16-H !GothicBBB-Medium}}
+%\AtBeginDvi{\special{pdf:mapline upjf-r UPJF-UTF16-H !Ryumin-Light}}
+%\AtBeginDvi{\special{pdf:mapline upjf-g UPJF-UTF16-H !GothicBBB-Medium}}
 
 \begin{document}
 \pagestyle{empty}
 \font\upjf=upjf at 10pt
-\upjf あいうえおｱｲｳｴｵ、雪𠮟。
+\upjf あいうえおｱｲｳｴｵ、☃~雪晴☀𠮟。
 \end{document}
 
