@@ -4,14 +4,15 @@
 # You may freely use, modify and/or distribute this file.
 
 TEXFONTS="$srcdir/testdata;."
-export TEXFONTS
+SOURCE_DATE_EPOCH=1588474800
+export TEXFONTS SOURCE_DATE_EPOCH
 
 cp $srcdir/testdata/upjf_full.vf ./upjf.vf && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map -N && \
+./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
 mv upjf.ps upjf_full.ps || exit 1
 
 cp $srcdir/testdata/upjf_omit.vf ./upjf.vf && \
-./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map -N && \
+./dvips -d 4 $srcdir/testdata/upjf.dvi -o upjf.ps -u $srcdir/testdata/upjf.map && \
 mv upjf.ps upjf_omit.ps || exit 2
 
 diff upjf_full.ps upjf_omit.ps || exit 3
